# slm-agentic-framework

./: .env.example  .gitignore  AGENTS.md  AVIONA_UX_SPEC.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  PROMPT_EXTEND_ROADMAP.md  PROMPT_REPLAN_PRODUCTION.md  README.md  ROADMAP.md  ROADMAP_AVIONA_V3.md  ROADMAP_FRAMEWORK_INTERACTIVE.md  ROADMAP_PHASES_13_PLUS.md  ROADMAP_PHASES_NEXT.md  ROADMAP_PRODUCTION_AVIONA.md  ROADMAP_PRODUCTION_AVIONA_V2.md  SECURITY.md  THESIS_PROJECT_HANDOFF_REPORT.md  pyproject.toml  requirements.txt
.claude/skills/: diagnose-e2e.md
.cursor/rules/: thesis-roadmap.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: cite_allowlist.yaml  eval.yaml  humaneval_hard_ids.txt  memory.yaml  models.yaml  truncation.yaml
configs/reporting/: cite_allowlist.yaml  humaneval_hard_ids.txt
configs/runtime/: eval.yaml  models.yaml  truncation.yaml
docs/: AVIONA_ARCHITECTURE_ISSUE.md  AVIONA_CURRENT_STATE.md  CLAUDE_PROMPT_FULL.txt  PROMPT_AVIONA_REPLAN.md  architecture.md  configuration.md  development.md  evaluation.md  index.md  migration.md  testing.md
eval/: __init__.py  config.py  curated.py  decision_log.py  manifest.py  paths.py  run_eval.py  run_quality.py  swe_docker.py
eval/datasets/: __init__.py  _curated_ids.py  _difficulty.py  _sample.py  humaneval_adapter.py  mbpp_adapter.py  swebench_adapter.py  synthetic_multistep.py
eval/metrics/: __init__.py  cer.py  ci.py  cost.py  efficiency.py  failure_taxonomy.py  qualitative.py  results.py  sr.py
eval/scenarios/: __init__.py  ablation.py  agent_count.py  interaction_length.py  retrieval_compare.py
examples/: README.md  minimal_session.py
scripts/: README.md  __init__.py  analyze_token_usage.py  analyze_traces.py  debug_session.py  diagnose_e2e.py  generate_report.py  install-aviona.ps1  live_gate.py  make_repro_bundle.py  run_benchmark_batch.py  run_phase12_staged.py  smoke_test.py  sync_discriminative_allowlist.py  test-aviona.ps1  watch_humaneval_sr.py
scripts/benchmark/: __init__.py  run_benchmark_batch.py  smoke_test.py  watch_humaneval_sr.py
scripts/maintenance/: __init__.py  analyze_token_usage.py  sync_discriminative_allowlist.py
scripts/reporting/: __init__.py  analyze_traces.py  diagnose_e2e.py  generate_report.py  make_repro_bundle.py
src/aviona/: __init__.py  __main__.py  budgets.py  cli.py  compaction.py  console.py  contract.py  debug_log.py  doctor.py  effects.py  env.py  fallbacks.py  gitctx.py  intent.py  permissions.py  profiles.py  project.py  render.py  repl.py  runtime.py  session.py  settings.py  snapshots.py  store.py  tools.py  turn_io.py  verify_turn.py
src/framework/: __init__.py  env.py  runtime_dirs.py
temp/roadmap-replan-handoff/: ARCHITECTURE_RULES.md  AVIONA_MVP_STATUS.md  FIXES_ALREADY_APPLIED.md  FRAMEWORK_ROOT_CAUSES.md  KEY_CODE_PATHS.md  PROBLEM_INVENTORY.md  PROMPT_FOR_CLAUDE_REPLAN.md  README.md  RECOMMENDED_PRINCIPLES.md  ROADMAP_CONTEXT.md  SESSION_EVIDENCE.md  TEST_COVERAGE_GAPS.md
tests/: conftest.py
tests/aviona/: JOURNEYS.md
tests/e2e/: test_ablation_discriminative.py  test_ablation_hard_slice.py  test_aviona_repl_matrix.py  test_full_session.py  test_humaneval_sample.py
tests/integration/: test_compound_edit_run.py  test_decision_cycle.py  test_interactive_turn.py  test_memory_control_integration.py  test_reflection_revise.py  test_workflow.py
tests/unit/: _mock_slm_queue.py  (+71 more)
(+63 files in other folders)
