[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-agentic-framework"
version = "0.4.0"
description = "SLM-based multi-agent programming framework (MSc thesis)"
requires-python = ">=3.11"

[project.scripts]
aviona = "aviona.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end tests requiring real API keys",
]

[tool.coverage.run]
source = ["src/framework"]
omit = ["tests/*"]
